--- a/src/app/admin/components/list-diplome/list-diplome.component.html
+++ b/src/app/admin/components/list-diplome/list-diplome.component.html
@@ -1,1 +1,46 @@
-<p>list-diplome works!</p>
+<div class="card">
+    <h2>Liste des Diplomes  
+        <button pButton type="button" label="Ajouter un Diplôme" class="p-button-success" (click)="onAdddiplome()"></button>
+    </h2>
+    <ng-container *ngIf="diplomes$ | async as data">
+        <p-progressSpinner *ngIf="loading$ | async" ariaLabel="loading" />
+        <p-table [value]="data" 
+                [tableStyle]="{'min-width': '30rem'}" 
+                selectionMode="single" 
+                dataKey="code" 
+                [paginator]="true"
+                [rows]="50"
+                [showCurrentPageReport]="true"
+                paginatorPosition="top"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                (onRowSelect)="onRowSelect($event)"
+                sortField="id_dip"
+                [sortOrder]="1" >
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="id_dip" style="width:5%">Code <p-sortIcon field="id_dip"></p-sortIcon></th>
+                    <th pSortableColumn="nom_dip" style="width:20%">Diplome <p-sortIcon field="nom_dip"></p-sortIcon></th>
+                    <th pSortableColumn="nom_cat" style="width:10%">Catégorie <p-sortIcon field="nom_cat"></p-sortIcon></th>
+                    <th pSortableColumn="groupe" style="width:20%">Groupe <p-sortIcon field="groupe"></p-sortIcon></th>
+                </tr>
+            </ng-template>
+            
+            <ng-template pTemplate="body" let-diplome>
+                
+                <tr [pSelectableRow]="diplome">
+                    <td>{{diplome.id_dip}}</td>
+                    <td>{{diplome.nom_dip}}</td>
+                    <td>{{diplome.nom_cat}}</td>
+                    <td>{{diplome.groupe}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorleft">
+                <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+                <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
+            </ng-template>
+        </p-table>
+    </ng-container>
+</div>
