--- a/src/app/admin/components/list-univ/list-univ.component.html
+++ b/src/app/admin/components/list-univ/list-univ.component.html
@@ -1,1 +1,45 @@
-<p>list-univ works!</p>
+<div class="card">
+    <h2>Liste des Université    
+        <button pButton type="button" label="Ajouter une Université" class="p-button-success" (click)="onAddUniv()"></button>
+    </h2> 
+    <ng-container *ngIf="universites$ | async as data">
+        <p-progressSpinner *ngIf="loading$ | async" ariaLabel="loading" />
+        <p-table [value]="data" 
+                [tableStyle]="{'min-width': '30rem'}" 
+                selectionMode="single" 
+                dataKey="code" 
+                [paginator]="true"
+                [rows]="50"
+                [showCurrentPageReport]="true"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                (onRowSelect)="onRowSelect($event)">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="id_univ" style="width:5%">Code <p-sortIcon field="id_univ"></p-sortIcon></th>
+                    <th pSortableColumn="sigle_univ" style="width:10%">Sigle <p-sortIcon field="sigle_univ"></p-sortIcon></th>
+                    <th pSortableColumn="nom_univ" style="width:20%">Name <p-sortIcon field="nom_univ"></p-sortIcon></th>
+                    <th pSortableColumn="type_univ" style="width:20%">Type <p-sortIcon field="type_univ"></p-sortIcon></th>
+                    <th pSortableColumn="ville_univ" style="width:20%">Ville <p-sortIcon field="ville_univ"></p-sortIcon></th>
+                </tr>
+            </ng-template>
+            
+            <ng-template pTemplate="body" let-universite>
+                
+                <tr [pSelectableRow]="universite">
+                    <td>{{universite.id_univ}}</td>
+                    <td>{{universite.sigle_univ}}</td>
+                    <td>{{universite.nom_univ}}</td>
+                    <td>{{universite.type_univ}}</td>
+                    <td>{{universite.ville_univ}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorleft">
+                <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+                <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
+            </ng-template>
+        </p-table>
+    </ng-container>
+</div>
