page des metiers

--- a/src/app/informations/components/info-metier/info-metier.component.html
+++ b/src/app/informations/components/info-metier/info-metier.component.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <!-- <app-pub-interest-item *ngFor="let schooli of school$ | async" [school]="schooli"></app-pub-interest-item> -->
         <div class="redaction-info">   
-            <h1>Les fiches métiers</h1> 
+            <h1>Les fiches métiers au Cameroun.</h1> 
             <p>
                 A la différence des précédentes, les générations actuelles savent qu'elles seront, 
                 majoritairement, amenées à accomplir différents métiers. Désormais, il n'est plus 
@@ -24,28 +24,199 @@
                 Même s'il s'agit d'une certaine réalité, il n'en reste pas moins que les jeunes 
                 doivent choisir une orientation afin de se diriger vers le secteur qui leur plait 
                 le plus. C'est cette orientation qui permet de choisir un métier. 
-            </p>       
-            <p-accordion [activeIndex]="0">
-                <p-accordionTab header="L'orientation après le bac">
-                    <p> 
-                    </p>
-                </p-accordionTab>
-                <p-accordionTab header="Comment choisir un métier ?">
-                    <p>
-                        
-                    </p>
-                </p-accordionTab>
-                <p-accordionTab header="Et si l'on a pas d'idée ?">
-                    <p>
-                       
-                    </p>
-                </p-accordionTab>
-            </p-accordion>
+            </p> 
+            <article>
+                <p-accordion [activeIndex]="0">
+                    <p-accordionTab header="L'orientation après le bac au Cameroun">
+                        <p>
+                            <b>L'orientation, ce n'est pas choisir un parcours pour ensuite faire un métier mais bien 
+                                choisir un métier puis effectuer les bonnes études.</b>
+                            Généralement, c'est après le bac que les élèves prennent vraiment la peine de se renseigner 
+                            sur les options de formation et donc de métier qui s'offrent à eux. Les chemins sont nombreux :
+                        </p>
+                        <ul>
+                            <li>concours aux grandes écoles</li>
+                            <li>BTS dans un IPES</li>
+                            <li>université d'état</li>
+                            <li>université étrangère</li>
+                            <li>certifications</li>
+                            <li>...</li>
+                        </ul>
+                        <p>
+                            Reste à savoir si en choisissant leur formation, les élèves comprennent qu'en réalité, 
+                            ils choisissent leur futur métier ? 
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Comment choisir un métier ?">
+                        <p>
+                            Il existe deux façons d'envisager l'avenir professionnel : en se basant sur la réussite, ou 
+                            en se focalisant sur un projet. L'idéal est de réaliser un rêve, c'est pourquoi le métier 
+                            doit être envisagé sous cet angle même si la raison est également importante. Si, enfant, 
+                            la majorité rêve d'aventure, une fois dans l'enseignement supérieur, les choix dépendent 
+                            davantage de critères plus terre à terre : il faut rentabiliser les études, privilégier 
+                            la sécurité, l'employabilité…
+                        </p>
+                        <p>
+                            Parmi les questions que doit se poser l'élève lorsqu'il réfléchit à l'orientation qu'il 
+                            doit prendre, il y a celle qui le concerne personnellement (qui veut-il être ?) et celle 
+                            qui concerne sa conception de la vie (que veut-il posséder ?).
+                        </p>
+                        <p>
+                            Il faut également garder en tête que la réussite ne passe pas forcément par l'obtention 
+                            d'un CDI (Contrat à Durée Indéterminée) . Etre en CDD (Contrat à durée déterminée) 
+                            ou avoir plusieurs mois en stage pro fournit de l'expérience, et c'est elle qui intéresse aujourd'hui 
+                            les recruteurs. Elle permet d'obtenir un meilleur salaire et facilite les recherches. 
+                            Au moment de l'orientation, il ne faut donc pas forcément privilégier les domaines qui 
+                            semblent le plus embaucher (même s'ils ne sont pas à négliger) mais rester optimiste et 
+                            motivé.
+                        </p>
+                        <p>
+                            Les choix ne doivent pas être déterminés par la peur de l'échec ou d'un salaire trop faible. 
+                            Une bonne orientation passe par du courage et engage la responsabilité personnelle de chacun.
+                            Surtout éviter de choisir pour faire comme telle ou telle personne. Il faut éviter <b>la Diplo-mythe</b>  : 
+                            <i>infection causée par une abondance de diplômes, parfois sans consistance intellectuelle.</i> 
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Et si l'on a pas d'idée ?">
+                        <p>
+                            Contrairement à ce que l'on pourrait penser, la majorité des élèves de lycées voire qui font déjà 
+                            partie de l'enseignement supérieur ne savent pas quoi faire comme métier ou vers quel domaine 
+                            se diriger. Il s'agit d'une véritable source d'angoisse, la pression existant autour de 
+                            l'orientation étant bien réelle. Très tôt, les élèves sont sollicités et doivent décider 
+                            d'un chemin et même si les réorientations sont possibles et de plus en plus facilitées, 
+                            la notion de perte de temps qui plane sur ceux qui n'ont pas encore fait leur choix est 
+                            constante.
+                        </p>
+                        <p>
+                            Ils sont nombreux à avoir commencé un BTS en informatique pour ensuite prendre le virage et 
+                            devenir IDE (infirmier) pour au final, devenir agent commercial dans une entreprise. 
+                            Tant de détours sont très souvent le résultat d'une orientation mal planifiée.
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Se poser les bonnes questions">
+                        <p>
+                            Ce genre de situation peut ainsi mener à de mauvaises orientations et l'élève se retrouve en 
+                            situation d'échec. Pourtant, il existe des façons d'y voir plus clair et de trouver une piste.
+                        </p>
+                        <p>
+                            L'orientation est une des premières grandes décisions dans la vie d'un individu. Pour être 
+                            réussie, elle doit être étudiée. En d'autres termes, l'orientation se prépare, il faut 
+                            emmagasiner le plus d'informations possibles afin de faire le choix le plus judicieux. Or, 
+                            comme il s'agit d'un processus angoissant, certains vont avoir tendance à le repousser et se 
+                            retrouvent à choisir dans l'urgence une formation pas adaptée. La première chose à faire est 
+                            d'être pragmatique. La question à se poser n'est pas "quel métier je souhaite faire" mais 
+                            <b>"dans les 5 ou 10 prochaines années, que veux-je faire ?".</b> 
+                        </p>
+                        <p>
+                            Pour y répondre, il faut se connaître. En cela les tests d'orientation &nbsp;sont intéressants, 
+                            il en existe de nombreux sur internet. <a href="#">Le teste d'orientation camerdiplome</a> est gratuit pour vous. 
+                            Ils permettent d'obtenir 
+                            quelques pistes. Celles-ci ne doivent pas être prises comme des vérités mais sont là pour 
+                            aider l'élève à se diriger et à se poser d'autres questions plus précises. On peut également 
+                            interroger les professeurs, les parents, les amis qui ont un regard extérieur, ce qui peut être 
+                            intéressant. Les activités et loisirs pratiqués sont également de bons indicateurs.
+                        </p>
+                        <p>
+                            Deuxième chose, faire une liste des besoins et des envies. Ces deux notions sont très 
+                            différentes, mais d'une importance capitale. Avoir envie de voyager n'est pas compatible avec 
+                            tous les métiers, de même que le besoin de dormir ou la nécessité d'avoir des horaires fixes 
+                            par exemple.
+                        </p>
+                        <p>
+                            La troisième et sûrement la plus importante des dispositions est de bien se renseigner sur son 
+                            environnement, les métiers actuellement disponibles, ceux en voie de disparition et ceux en pleine croissance. 
+                            Il y a quelques années, il n'étais pas imaginable d'envisager que la gestion d'une page Facebook puisse 
+                            faire vivre une famille. Il 
+                        </p>
+                        <p>
+                            Il faut aussi ajouter l'importance du réseau. Il est plus facile pour un fils de boulanger de devenir boulanger. 
+                            À aptitude égale, le fils d'une famille de juriste aura plus de chance d'évoluer dans le domaine du droit que le 
+                            fils du boulanger. Ça fait partie des réalités à ne pas négliger.
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Faire de l'investigation">
+                        <p>
+                            L'argument qui revient le plus fréquemment chez les élèves qui ne savent pas quelle orientation 
+                            emprunter concerne les métiers à proprement parler. Beaucoup regrettent de ne pas avoir 
+                            davantage d'informations sur certains postes voire domaines et certains avouent découvrir des 
+                            métiers ou formations qui auraient pu les intéresser alors qu'ils ont déjà terminé leurs études 
+                            ou fait leurs premiers pas dans la vie active. Difficile dès lors d'oser tout quitter pour  
+                            recommencer.
+                        </p>
+                        <p>
+                            C'est pourquoi il est important d'effectuer une véritable investigation. Cela peut commencer 
+                            par la consultation de <a href="#">fiches métiers,</a> disponibles sur Camerdiplome, dans les établissements, 
+                            les centres d'orientation… Il faut garder en tête cependant que la réalité du métier n'est 
+                            pas sur le papier, elle change, surtout en ce qui concerne les nouveaux postes, notamment 
+                            ceux liés au numérique. On peut aussi opter pour les présentations 
+                            de métiers en vidéos, plus percutantes.
+                        </p>
+                        <p>
+                            De même, il faut s'interroger sur l'environnement que l'on convoite. Travailler dans les 
+                            ressources humaines au sein d'une entreprise locale n'a rien à voir avec le même métier mais 
+                            effectuer&nbsp;dans une société internationale par exemple. Start-up, multinationales, 
+                            à son compte, les possibilités sont multiples et les postes le sont tout autant. Là encore, 
+                            inutile de se projeter dans 25 ans, il faut rester focalisé sur les premières années 
+                            professionnelles.
+                        </p>
+                        <p>
+                            La plateforme Camerdiplome a été conçue dans le but de fournir gratuitement le maximum 
+                            d'information à ceux qui souhaitent s'orienter au Cameroun. Prenez le temps de lire, car 
+                            c'est de votre futur professionnel dont il est question. N'hésitez pas à nous contacter via 
+                            WhatsApp 
+                            <a aria-label="Chat on WhatsApp" href="https://wa.me/237679197112"><p-button label="Chat on WhatsApp"  icon="pi pi-whatsapp" [rounded]="true" severity="success" />
+                            </a> pour plus d'information.
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Connaître les secteurs qui recrutent.">
+                        <p>
+                            Pour vous aider dans vos recherches, n'hésitez pas à consulter l'article sur les secteurs et 
+                            métiers qui recrutent. Ce sera un bon moyen d'avoir quelques idées de métiers qui pourraient 
+                            vous intéresser.&nbsp;
+                        </p>
+                    </p-accordionTab>
+                    <p-accordionTab header="Être sûr de ne pas faire d'erreur">
+                        <p>
+                            Difficile malgré toutes les recherches que l'on effectue de s'assurer que l'orientation 
+                            choisie est la bonne. C'est là qu'entre en jeu l'expérience sur le terrain. Elle est un 
+                            excellent moyen de se confronter à une certaine réalité de l'emploi. Certes il est possible 
+                            d'effectuer des stages, mais ceux-ci ne sont pas toujours faciles à obtenir ni à mener 
+                            lorsque l'on est encore lycéen ou que l'on n'a pas de diplôme. La solution est d'aller 
+                            au-devant des professionnels directement. Nombreux sont ceux qui se montreront enthousiastes 
+                            à l'idée de partager leur expérience, ne serait-ce que le temps d'une conversation. Pour les 
+                            rencontrer, il suffit de savoir activer son réseau. Chez un commerçant, engager la 
+                            conversation peut mener à une rencontre !
+                        </p>
+                        <p>Ensuite, il faudra préparer l'entretien, réfléchir à certaines questions notamment celles qui 
+                            concernent le parcours effectué pour en arriver à ce métier.
+                        </p>
+                        <p>
+                            C'est à ce moment-là qu'il faudra se préoccuper des études, réfléchir au chemin à emprunter 
+                            pour arriver au poste convoité.
+                        </p>
+                        <p>
+                            <b>L'orientation, ce n'est pas choisir un parcours pour ensuite faire un métier mais bien 
+                                choisir un métier puis effectuer les bonnes études.</b>
+                             S'interroger, s'informer, échanger, 
+                            rencontrer sont donc autant d'étapes qui permettent de choisir un métier, une orientation.
+                        </p>
+                    </p-accordionTab>
+                </p-accordion>
+            </article>      
 
-            <p-card header="Fiches métier" >
-                <p-card></p-card>
+        </div>
+        <div>
+            <h2>Liste des formations </h2>
+            <p-card header="Liste des formations" >
+                <div class="dolom">
+                    <p-button [raised]="true" [outlined]="true" label="Voir plus" severity="contrast"/>
+                    <span><p-button [raised]="true" icon="pi pi-chevron-circle-right" iconPos="right" label="Trouver ma formation" severity="help" (click)="trouverForm()" /></span>
+                </div>
             </p-card>
-            
+        </div>
+            <h2>Les écoles à la une</h2>
+        <div>
+
         </div>
     </div>
     <aside class="side-container">
