--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,11 @@
 .logo {
     width: 150px;
 }
+
+:host ::ng-deep{
+    .p-menuitem-content {
+        a{
+            text-decoration: none;
+        }
+    }
+}
