Nous avons rendu visible les contact des écoles

--- a/src/app/informations/components/info-bts/info-bts.component.html
+++ b/src/app/informations/components/info-bts/info-bts.component.html
@@ -252,7 +252,7 @@
                 </p-accordionTab>
             </p-accordion>
 
-            <p-card header="Liste des BTS" >
+            <p-card header="BTS par domaine les plus recherchés" >
                 <p-card></p-card>
             </p-card>
             
