--- a/src/app/shared/components/pub-interest-item/pub-interest-item.component.scss
+++ b/src/app/shared/components/pub-interest-item/pub-interest-item.component.scss
@@ -16,6 +16,8 @@
 p-tag {
     margin: 7px;
     text-align: center;
+    background: none;
+    color: #111111;
 }
 .card {
    // width: 400px;
@@ -35,3 +37,6 @@ img {
     text-align: center;
 }
 
+.footer{
+    margin-top: 30px;
+}
