--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -74,7 +74,7 @@
               ACCÈS DIRECT
             </h6>
             <p>
-              <a routerLink="building" class="text-reset">Camerdiplome Avis</a>
+              <a routerLink="avis" class="text-reset">Camerdiplome Avis</a>
             </p>
             <p>
               <a routerLink="building" class="text-reset">Journée porte ouverte - JPO</a>
