--- a/src/app/shared/components/pub-interest-item/pub-interest-item.component.scss
+++ b/src/app/shared/components/pub-interest-item/pub-interest-item.component.scss
@@ -11,14 +11,14 @@
         padding: 0;
     }
 
+    .p-tag {
+        margin: 7px;
+        text-align: center;
+        background: none;
+        color: #111111;
+    }
 }
 
-p-tag {
-    margin: 7px;
-    text-align: center;
-    background: none;
-    color: #111111;
-}
 .card {
    // width: 400px;
     margin-top: 40px;
