--- a/src/app/admin/components/admin-start/admin-start.component.html
+++ b/src/app/admin/components/admin-start/admin-start.component.html
@@ -6,11 +6,15 @@
         <button pButton type="button" label="Ecoles" (click)="ecoleClick()"></button>
         <button pButton type="button" label="Diplômes" (click)="diplomeClick()"></button>
         <button pButton type="button" label="Formations" (click)="formationClick()"></button>
+        <button pButton type="button" label="Articles" (click)="ArticleClick()"></button>
+        <button pButton type="button" label="Avis" (click)="AvisClick()"></button>
     </div>
     <app-list-univ *ngIf="univView" />
     <app-list-campus *ngIf="campusView" />
-    <app-list-ecole *ngIf="ecoleView" />
+    <app-list-ecole *ngIf="ecoleView"/>
     <app-list-diplome *ngIf="diplomeView" />
     <app-list-formation *ngIf="formationView"/>
+    <app-list-article *ngIf="articleView"/>
+    <app-list-avis *ngIf="avisView"/>
 
 <div>
