--- a/src/app/shared/components/pub-interest-item/pub-interest-item.component.html
+++ b/src/app/shared/components/pub-interest-item/pub-interest-item.component.html
@@ -66,7 +66,7 @@
 
                     </div>
                     <div class="footer">
-                        <p-button label="Voir l'établissement" (click)="showOnePage(school.nom_e)" [outlined]="true" [rounded]="true"  severity="contrast"></p-button>
+                        <p-button label="Voir l'établissement" (click)="showOnePage(school.nom_e)" [rounded]="true"  severity="secondary"></p-button>
                         <!-- <p-button label="Demander des informaions" (click)="sendNumber()"  styleClass="p-button-warning" ></p-button> -->
                     </div>
                 </div>
